# ocs

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  buildconfig.h.in  cudaSift.cu  cudaSift.h  cudaSift_Descriptors.cu  cudaSift_Keypoints.cu  cudaSift_Orientation.cu  cudaSift_Pyramid.cu  cudaSift_init.cu  main.cpp  matching.cu  matching.h  sift_base.h  sift_defines.h  test.cu  wrapper.cu  wrapper.h
src/cuda/: cudaSift.cu  cudaSift.h  cudaSift_Descriptors.cu  cudaSift_Keypoints.cu  cudaSift_Orientation.cu  cudaSift_Pyramid.cu  cudaSift_init.cu  matching.cu  matching.h  sift_defines.h  test.cu  wrapper.cu  wrapper.h
src/dep/saiga/: buildconfig.h
src/dep/saiga/cuda/imageProcessing/: convolution.cu  convolution_col.cu  convolution_row.cu  difference.cu  filter.cu  image.h  imageProcessing.h  scale.cu
src/dep/saiga/opencv/: opencv.h
src/saiga/: array_view.h  assert.cpp  assert.h  common.h  convolution.cu  convolution.h  cudaHelper.h  cudaTimer.cu  cudaTimer.h  device_helper.h  difference.cu  difference.h  filter.cu  filter.h  glm.h  image.cu  image.h  imageView.h  imath.h  memory.h  opencv.h  performanceMeasure.h  reduce.h  scale.cu  scale.h  shfl_helper.h  statistics.h  thread_info.h  time.h  timer.h
